Added some notes

--- a/BM_QME/BM_QME.tex
+++ b/BM_QME/BM_QME.tex
@@ -169,7 +169,7 @@ We will now convert equation~\ref{redfieldnointegral} to the Schr{\"o}dinger pic
 \end{equation}
 where
 \begin{equation}\label{Lambdasch}
-\Lambda_{\alpha\beta}(t) = \int_o^t\dd{t_1} e^{-iH_A(t-t_1)}A_{\beta}^{\dag}e^{iH_A(t-t_1)}G_{\alpha\beta}(t,t_1)
+\Lambda_{\alpha\beta}(t) = \int_0^t\dd{t_1} e^{-iH_A(t-t_1)}A_{\beta}^{\dag}e^{iH_A(t-t_1)}G_{\alpha\beta}(t,t_1)
 \end{equation}
 Inserting these equations into equation~\ref{redfieldnointegral}, we obtain the dynamical equation in the Schr{\"o}dinger picture:
 \begin{equation}\label{yas}
