Fixed a major typo in the expression for heat.

--- a/BM_QME/BM_QME.tex
+++ b/BM_QME/BM_QME.tex
@@ -204,7 +204,7 @@ This is fine, but not really useful because we have no method for recording the 
 \end{align}
 where $U = \Tr{H_A\rho_A}$ is the internal energy of the system. We interpret this result as energy conservation, in which the heat released by the system is stored in the system and coupling energies. If we introduce a bilinear coupling $V_I = A\ten X$. Then, we can write the heat as
 \begin{equation}
-    Q_B = \Delta U + \Delta\Ptra{A}{X\eta}
+    Q_B = \Delta U + \Delta\Ptra{A}{A\eta}
 \end{equation}
 where $\eta = \Ptra{B}{(\I\ten X)\rho_{AB}}$.
 
